--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -13,13 +13,22 @@
 </head>
 <body class ="bg-black">
     <div >
-        <h1 id ="Title" class="heading">
+        <h1 id ="title" class="heading">
             Dom learning on chai and code
+            <span style="display: none;">test text</span>
         </h1>
         <h2>Lorem ipsum dolor sit.</h2>
         <h2>Lorem ipsum dolor sit amet consectetur.</h2>
 
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type = "password" >
+        <ul>
+            <li class="List-Item">one</li>
+            <li class="List-Item">two</li>
+            <li class="List-Item">three</li>
+            <li class="List-Item">Four</li>
+            //nodelist and html collection are not pure array
+        </ul>
     </div>
 </body>
 </html>
