--- a/08_events/two.html
+++ b/08_events/two.html
@@ -25,7 +25,9 @@
     setTimeout(changeText,2000)
     
     const changeMe = setTimeout(changeText,2000)
-    document.querySelector('click',function(){
+
+    document.querySelector('#stop').
+    addEventListener('click',function(){
         clearTimeout(changeMe)
         console.log("Stopped")
     })
